apps/api/snow.txt
  File "<string>", line 6
    cur.execute(\
               ^
SyntaxError: '(' was never closed
